# revpi-modbus

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ChangeLog.txt  Doxyfile  README.md  README.txt  piModbus.sln  revpi-modbus_1.0.10.orig.tar.gz.delta  revpi-modbus_1.0.10.orig.tar.gz.id  revpi-modbus_1.0.11.orig.tar.gz.delta  revpi-modbus_1.0.11.orig.tar.gz.id  revpi-modbus_1.0.9.orig.tar.gz.delta  revpi-modbus_1.0.9.orig.tar.gz.id  revpi-modbus_1.1.0.orig.tar.gz.delta  revpi-modbus_1.1.0.orig.tar.gz.id  revpi-modbus_1.2.0.orig.tar.gz.delta  revpi-modbus_1.2.0.orig.tar.gz.id  revpi-modbus_1.2.1.orig.tar.gz.delta  revpi-modbus_1.2.1.orig.tar.gz.id  revpi-modbus_1.3.0.orig.tar.gz.delta  revpi-modbus_1.3.0.orig.tar.gz.id
.github/workflows/: static_analysis.yml
.reuse/: dep5
data/firewalld/: revpi-modbus-default.xml
debian/: changelog  control  copyright  gbp.conf  pimodbus-master.install  pimodbus-slave.install  revpi-modbus-client.install  revpi-modbus-server.install  revpi-modbus-server.postinst  revpi-modbus-server.postrm  revpi-modbus-server.prerm  rules  sysuser
doc/: ErrorCodes.txt  Konfiguration_VirtualDevices_ModbusTCPMaster_ModbusRTUMaster.docx  ModbusMaster_PictoryConfiguration.txt  assessment.md  compile_readme.txt  io.md
piModbusMaster/: Makefile  debug.mak  gcc_Debug.h  gcc_Debug.old00  gcc_Release.h  piModbusMaster-Debug.vgdbsettings  piModbusMaster-Release.vgdbsettings  piModbusMaster.vcxproj  piModbusMaster.vcxproj.filters  project.h  release.mak
piModbusMaster/Script/: print-usb-serial-info
piModbusMaster/debian/: changelog
piModbusMasterStretch/: debug.mak  gcc_Debug.h  gcc_Release.h  piModbusMasterStretch-Debug.vgdbsettings  piModbusMasterStretch-Release.vgdbsettings  piModbusMasterStretch.vcxproj  piModbusMasterStretch.vcxproj.filters  release.mak  target.mak
piModbusMasterStretch/debian/: changelog  control  copyright  pimodbus-master.install
piModbusSlave/: Makefile  gcc_Debug.h  gcc_Release.h  piModbusSlave-Debug.vgdbsettings  piModbusSlave-Release.vgdbsettings  piModbusSlave.vcxproj  piModbusSlave.vcxproj.filters  release.mak
piModbusSlave/debian/: changelog
piModbusSlaveStretch/: Makefile  debug.mak  gcc_Debug.h  gcc_Release.h  piModbusSlaveStretch-Debug.vgdbsettings  piModbusSlaveStretch-Release.vgdbsettings  piModbusSlaveStretch.vcxproj  piModbusSlaveStretch.vcxproj.filters  project.h  target.mak
piModbusSlaveStretch/debian/: changelog  control  pimodbus-slave.install
src/: .clang-tidy  CMakeLists.txt  ComAndDataProcessor.c  ComAndDataProcessor.h  ModbusMasterThread.c  ModbusMasterThread.h  ModbusSlaveThread.c  ModbusSlaveThread.h  Scheduler.c  Scheduler.h  modbusconfig.h  piModbusMaster.c  piModbusSlave.c  piModbusSlave.h  piProcessImageAccess.c  piProcessImageAccess.h  project.h
src/piConfigParser/: piConfigParser.c  piConfigParser.h
systemd/: CMakeLists.txt  pimodbus-master.service  pimodbus-slave.service
